deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    app: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
      tier: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: django
        tier: app
    spec:
      containers:
        - image: dan1ar/info-stambul-ui:latest
          name: app
          resources:
            requests:
              cpu: 100m
              memory: 250Mi
            limits:
              memory: "2Gi"
              cpu: "500m"

        - image: dan1ar/django-proxy:latest
          name: proxy
          ports:
            - containerPort: 8000
              name: proxy
---

apiVersion: v1
kind: Service
metadata:
  name: django
  labels:
    app: django
spec:
  ports:
    - port: 8000
  selector:
    app: django
    tier: app

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/app-root: /
  name: nginx-example
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: www.project-stambul.ru
    http:
      paths:
      - path: /ui
        pathType: Prefix
        backend:
          service:
            name: django
            port:
              number: 8000
